--- a/CapstonePRN292/CapstonePRN292.csproj
+++ b/CapstonePRN292/CapstonePRN292.csproj
@@ -59,6 +59,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="1. Form Layer\RegisterX.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="1. Form Layer\RegisterX.Designer.cs">
+      <DependentUpon>RegisterX.cs</DependentUpon>
+    </Compile>
+    <Compile Include="2. Business Layer\RegisterDAO.cs" />
     <Compile Include="3. Data Layer\DBConnection.cs" />
     <Compile Include="1. Form Layer\AdminX.cs">
       <SubType>Form</SubType>
@@ -86,6 +93,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="1. Form Layer\RegisterX.resx">
+      <DependentUpon>RegisterX.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AccountProfile.resx">
       <DependentUpon>AccountProfile.cs</DependentUpon>
     </EmbeddedResource>
@@ -125,8 +135,6 @@
   <ItemGroup>
     <None Include="Resources\man-on-motorbike_icon-icons.com_68531.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="2. Business Layer\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
