--- a/CapstonePRN292/CapstonePRN292.csproj
+++ b/CapstonePRN292/CapstonePRN292.csproj
@@ -59,6 +59,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="1. Form Layer\Confirm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="1. Form Layer\Confirm.Designer.cs">
+      <DependentUpon>Confirm.cs</DependentUpon>
+    </Compile>
     <Compile Include="1. Form Layer\RegisterX.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,10 +79,10 @@
     <Compile Include="1. Form Layer\AdminX.Designer.cs">
       <DependentUpon>AdminX.cs</DependentUpon>
     </Compile>
-    <Compile Include="AccountProfile.cs">
+    <Compile Include="1. Form Layer\AccountProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AccountProfile.Designer.cs">
+    <Compile Include="1. Form Layer\AccountProfile.Designer.cs">
       <DependentUpon>AccountProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="1. Form Layer\DepotX.cs">
@@ -93,10 +99,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="1. Form Layer\Confirm.resx">
+      <DependentUpon>Confirm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="1. Form Layer\RegisterX.resx">
       <DependentUpon>RegisterX.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AccountProfile.resx">
+    <EmbeddedResource Include="1. Form Layer\AccountProfile.resx">
       <DependentUpon>AccountProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="1. Form Layer\AdminX.resx">
